yaml/tomcat-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-was
  namespace: backend 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-was
  template:
    metadata:
      labels:
        app: main-was
    spec:
      containers:
      - image: 884949236511.dkr.ecr.ap-northeast-2.amazonaws.com/main-was:v5.5
        name: main-was
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
      nodeSelector:
        web: main
---
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  namespace: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: main-was
  type: ClusterIP
  clusterIP: 172.20.0.100
